switch to prod apel server in sender.cfg

--- a/sender.cfg
+++ b/sender.cfg
@@ -35,9 +35,9 @@ capath: /etc/grid-security/certificates
 
 # Queue to which SSM will send messages
 # APEL Test Server
-destination: /queue/global.accounting.test.cpu.central 
+# destination: /queue/global.accounting.test.cpu.central
 # APEL Production Server
-# destination: /queue/global.accounting.cpu.central
+destination: /queue/global.accounting.cpu.central
 
 # Outgoing messages will be read and removed from this directory.
 path: /var/spool/apel/outgoing
