Automatically remove the container when it exits
--rm misplaced, should have been right after `docker run` instead of end of line

--- a/gracc-apel.service
+++ b/gracc-apel.service
@@ -4,4 +4,4 @@ Description=GRACC APEL reporting Docker container
 
 [Service]
 Type=oneshot
-ExecStart=/bin/docker run -v /etc/grid-security/apel/apelcert.pem:/etc/grid-security/apel/apelcert.pem -v /etc/grid-security/apel/apelkey.pem:/etc/grid-security/apel/apelkey.pem opensciencegrid/gracc-apel --rm
+ExecStart=/bin/docker run --rm -v /etc/grid-security/apel/apelcert.pem:/etc/grid-security/apel/apelcert.pem -v /etc/grid-security/apel/apelkey.pem:/etc/grid-security/apel/apelkey.pem opensciencegrid/gracc-apel
