Configuration updated to use AMS

--- a/sender.cfg
+++ b/sender.cfg
@@ -6,16 +6,21 @@
 
 # The SSM will query a BDII to find brokers available.  These details are for the 
 # EGI production broker network
-bdii: ldap://lcg-bdii.cern.ch:2170
-network: PROD
+#bdii: ldap://lcg-bdii.cern.ch:2170
+#network: PROD
 # OR (these details will only be used if the broker network settings aren't used)
 #host: test-msg01.afroditi.hellasgrid.gr
 #port: 6163
+host: msg.argo.grnet.gr
+port: 443
 
 # broker authentication.  If use_ssl is set, the certificates configured
 # in the mandatory [certificates] section will be used. 
 use_ssl: true
 
+[sender]
+# Either 'STOMP' for STOMP message brokers or 'AMS' for Argo Messaging Service
+protocol: AMS
 
 ################################################################################
 # Required: Certificate configuration
@@ -37,14 +42,20 @@ capath: /etc/grid-security/certificates
 # APEL Test Server
 # destination: /queue/global.accounting.test.cpu.central
 # APEL Production Server
-destination: /queue/global.accounting.cpu.central
+#destination: /queue/global.accounting.cpu.central
 
+# Queue to which SSM will send messages
+destination: gLite-APEL
 # Outgoing messages will be read and removed from this directory.
 path: /var/spool/apel/outgoing
+
+# If using AMS this is the project that SSM will connect to. Ignored for STOMP.
+ams_project: accounting
 
 [logging]
 logfile: /var/log/apel/ssmsend.log
 # Available logging levels:
 # DEBUG, INFO, WARN, ERROR, CRITICAL
-level: INFO
+#level: INFO
+level: DEBUG
 console: true
